WalletCheckBalance method and henhandler added
